--- a/src/WebAPPs/SPA/Blazor.WASM/Pages/Services/Services.razor
+++ b/src/WebAPPs/SPA/Blazor.WASM/Pages/Services/Services.razor
@@ -13,17 +13,21 @@
     AI
         Machine learning
     Data Architecture
-    UX Design
     Industry 4.0
     Technologies we use
 
     <----------------------------------------->
 *@
 
-<div class="toi-container">
-    <img src="https://via.placeholder.com/1000x300" alt="@LocalizationService.Keys["Services_ImageAlt_TextOverImage"]" class="toi-image" style="width:100%;">
-    <div class="toi-text-centered">@LocalizationService.Keys["Services_TextOverImage_Text"]</div>
-</div>
+<TextOverImage 
+               Alt="@LocalizationService.Keys["Services_ImageAlt_TextOverImage"]" 
+               Src="https://via.placeholder.com/1000x300" 
+               TextPosition="TextOverImageType.Centered" 
+>
+    <Text>
+        @LocalizationService.Keys["Services_TextOverImage_Text"]
+    </Text>
+</TextOverImage>
 
 <div class="services-container">
 
@@ -32,63 +36,36 @@
             <div class="mat-layout-grid-cell mat-layout-grid-cell">
                 <ServiceCardComponent ImageSRC="https://via.placeholder.com/300" ServiceURL="/services/unique-dev">
 
-                    <Title>@LocalizationService.Keys["Services_ServiceCards_Card1_Title"]</Title>
+                    <Title>@LocalizationService.Keys["Services_ServiceCards_Card_UniqueDev_Title"]</Title>
 
-                    <Content>@LocalizationService.Keys["Services_ServiceCards_Card1_Content"]</Content>
+                    <Content>@LocalizationService.Keys["Services_ServiceCards_Card_UniqueDev_Content"]</Content>
 
                 </ServiceCardComponent>
             </div>
             <div class="mat-layout-grid-cell mat-layout-grid-cell">
                 <ServiceCardComponent ImageSRC="https://via.placeholder.com/300" ServiceURL="/services/web-dev">
 
-                    <Title>@LocalizationService.Keys["Services_ServiceCards_Card2_Title"]</Title>
+                    <Title>@LocalizationService.Keys["Services_ServiceCards_Card_WebDev_Title"]</Title>
 
-                    <Content>@LocalizationService.Keys["Services_ServiceCards_Card2_Content"]</Content>
+                    <Content>@LocalizationService.Keys["Services_ServiceCards_Card_WebDev_Content"]</Content>
 
                 </ServiceCardComponent>
             </div>
             <div class="mat-layout-grid-cell mat-layout-grid-cell">
                 <ServiceCardComponent ImageSRC="https://via.placeholder.com/300" ServiceURL="/services/mobile-dev">
 
-                    <Title>@LocalizationService.Keys["Services_ServiceCards_Card3_Title"]</Title>
+                    <Title>@LocalizationService.Keys["Services_ServiceCards_Card_MobileDev_Title"]</Title>
 
-                    <Content>@LocalizationService.Keys["Services_ServiceCards_Card3_Content"]</Content>
+                    <Content>@LocalizationService.Keys["Services_ServiceCards_Card_MobileDev_Content"]</Content>
 
                 </ServiceCardComponent>
             </div>
             <div class="mat-layout-grid-cell mat-layout-grid-cell">
                 <ServiceCardComponent ImageSRC="https://via.placeholder.com/300" ServiceURL="/services/industry-4_0">
 
-                    <Title>@LocalizationService.Keys["Services_ServiceCards_Card4_Title"]</Title>
+                    <Title>@LocalizationService.Keys["Services_ServiceCards_Card_Industry4_0_Title"]</Title>
 
-                    <Content>@LocalizationService.Keys["Services_ServiceCards_Card4_Content"]</Content>
-
-                </ServiceCardComponent>
-            </div>
-            <div class="mat-layout-grid-cell mat-layout-grid-cell">
-                <ServiceCardComponent ImageSRC="https://via.placeholder.com/300" ServiceURL="/services/ux-dev">
-
-                    <Title>@LocalizationService.Keys["Services_ServiceCards_Card5_Title"]</Title>
-
-                    <Content>@LocalizationService.Keys["Services_ServiceCards_Card5_Content"]</Content>
-
-                </ServiceCardComponent>
-            </div>
-            <div class="mat-layout-grid-cell mat-layout-grid-cell">
-                <ServiceCardComponent ImageSRC="https://via.placeholder.com/300" ServiceURL="/services/ai-dev">
-
-                    <Title>@LocalizationService.Keys["Services_ServiceCards_Card6_Title"]</Title>
-
-                    <Content>@LocalizationService.Keys["Services_ServiceCards_Card6_Content"]</Content>
-
-                </ServiceCardComponent>
-            </div>
-            <div class="mat-layout-grid-cell mat-layout-grid-cell">
-                <ServiceCardComponent ImageSRC="https://via.placeholder.com/300" ServiceURL="/services/data-dev">
-
-                    <Title>@LocalizationService.Keys["Services_ServiceCards_Card7_Title"]</Title>
-
-                    <Content>@LocalizationService.Keys["Services_ServiceCards_Card7_Content"]</Content>
+                    <Content>@LocalizationService.Keys["Services_ServiceCards_Card_Industry4_0_Content"]</Content>
 
                 </ServiceCardComponent>
             </div>
@@ -96,9 +73,9 @@
             <div class="mat-layout-grid-cell mat-layout-grid-cell">
                 <ServiceCardComponent ImageSRC="https://via.placeholder.com/300" ServiceURL="/services/tech-we-use">
 
-                    <Title>@LocalizationService.Keys["Services_ServiceCards_Card8_Title"]</Title>
+                    <Title>@LocalizationService.Keys["Services_ServiceCards_Card_TwU_Title"]</Title>
 
-                    <Content>@LocalizationService.Keys["Services_ServiceCards_Card8_Content"]</Content>
+                    <Content>@LocalizationService.Keys["Services_ServiceCards_Card_TwU_Content"]</Content>
 
                 </ServiceCardComponent>
             </div>
@@ -106,9 +83,9 @@
             <div class="mat-layout-grid-cell mat-layout-grid-cell">
                 <ServiceCardComponent ImageSRC="https://via.placeholder.com/300" ServiceURL="/services/process-and-strategy">
 
-                    <Title>@LocalizationService.Keys["Services_ServiceCards_Card9_Title"]</Title>
+                    <Title>@LocalizationService.Keys["Services_ServiceCards_Card_PaS_Title"]</Title>
 
-                    <Content>@LocalizationService.Keys["Services_ServiceCards_Card9_Content"]</Content>
+                    <Content>@LocalizationService.Keys["Services_ServiceCards_Card_PaS_Content"]</Content>
 
                 </ServiceCardComponent>
             </div>
