--- a/src/WebAPPs/SPA/Blazor.WASM/_Imports.razor
+++ b/src/WebAPPs/SPA/Blazor.WASM/_Imports.razor
@@ -23,3 +23,5 @@
 @using HomeAPP.WebAPPs.SPA.Blazor.WASM.Shared.Layouts
 @using HomeAPP.WebAPPs.SPA.Blazor.WASM.Shared.NavMenu
 @using HomeAPP.WebAPPs.SPA.Blazor.WASM.Services.Repositories.Abstractions
+@using HomeAPP.WebAPPs.SPA.Blazor.WASM.Shared.Components 
+@using HomeAPP.WebAPPs.SPA.Blazor.WASM.Pages.Services.Component 
