--- a/src/WebAPPs/SPA/Blazor.WASM/Pages/Services/Service/UniqueSoftwareDev.razor
+++ b/src/WebAPPs/SPA/Blazor.WASM/Pages/Services/Service/UniqueSoftwareDev.razor
@@ -1,1 +1,117 @@
 ﻿@page "/services/unique-dev"
+
+@inject ILanguageContainerService LanguageContainerService
+
+
+<TextOverImage Alt="@LanguageContainerService.Keys["Services_UniqueSoftwareDev_ImageAlt_Title"]"
+               Src="https://via.placeholder.com/1000x300"
+               TextPosition="TextOverImageType.Centered">
+    <Text>
+        <MatH1>@LanguageContainerService.Keys["Services_UniqueSoftwareDev_Title"]</MatH1>
+    </Text>
+</TextOverImage>
+
+
+
+<MatDivider Class="m-5" />
+
+<div class="mat-layout-grid">
+    <div class="mat-layout-grid-inner">
+        <div class="mat-layout-grid-cell">
+            <MatH3>@LanguageContainerService.Keys["Services_UniqueSoftwareDev_Unique_Requirements_Title"]</MatH3>
+            <p>
+                @LanguageContainerService.Keys["Services_UniqueSoftwareDev_Unique_Requirements_Text"]
+            </p>
+        </div>
+        <div class="mat-layout-grid-cell">
+            <img src="https://via.placeholder.com/500x300" alt="@LanguageContainerService.Keys["Services_UniqueSoftwareDev_ImageAlt_Unique_Requirements"]" />
+        </div>
+    </div>
+    <div class="mat-layout-grid-inner">
+        <div class="mat-layout-grid-cell">
+            <img src="https://via.placeholder.com/500x300" alt="@LanguageContainerService.Keys["Services_UniqueSoftwareDev_ImageAlt_Unique_Requirements_Advantages"]" />
+        </div>
+        <div class="mat-layout-grid-cell">
+            <MatH3>@LanguageContainerService.Keys["Services_UniqueSoftwareDev_Unique_Requirements_Advantages_Title"]</MatH3>
+            <p>
+                @LanguageContainerService.Keys["Services_UniqueSoftwareDev_Unique_Requirements_Advantages_Text"]
+            </p>
+        </div>
+    </div>
+
+    <MatDivider Class="m-3" />
+
+    <div class="mat-layout-grid-inner">
+        <div class="mat-layout-grid-cell">
+            <MatH3>@LanguageContainerService.Keys["Services_UniqueSoftwareDev_HowWeDoBusiness_Title"]</MatH3>
+            <p>
+                @LanguageContainerService.Keys["Services_UniqueSoftwareDev_HowWeDoBusiness_Text"]
+            </p>
+        </div>
+    </div>
+
+</div>
+
+<MatDivider Class="m-5" />
+
+<div class="mat-layout-grid m-auto">
+    <div class="mat-layout-grid-inner">
+        <div class="mat-layout-grid-cell">
+            <img src="https://via.placeholder.com/128x128" />
+        </div>
+        <div class="mat-layout-grid-cell">
+            <img src="https://via.placeholder.com/128x128" />
+        </div>
+        <div class="mat-layout-grid-cell">
+            <img src="https://via.placeholder.com/128x128" />
+        </div>
+        <div class="mat-layout-grid-cell">
+            <img src="https://via.placeholder.com/128x128" />
+        </div>
+        <div class="mat-layout-grid-cell">
+            <img src="https://via.placeholder.com/128x128" />
+        </div>
+    </div>
+</div>
+
+<MatDivider Class="m-5" />
+
+<div class="m-auto">
+    <ToggleableQuestionComponent Question="@LanguageContainerService.Keys["Services_UniqueSoftwareDev_Questions_1"]">
+        <Answer>
+            @LanguageContainerService.Keys["Services_UniqueSoftwareDev_Questions_1_Answer"]
+        </Answer>
+    </ToggleableQuestionComponent>
+
+    <ToggleableQuestionComponent Question="@LanguageContainerService.Keys["Services_UniqueSoftwareDev_Questions_2"]">
+        <Answer>
+            @LanguageContainerService.Keys["Services_UniqueSoftwareDev_Questions_2_Answer"]
+        </Answer>
+    </ToggleableQuestionComponent>
+
+    <ToggleableQuestionComponent Question="@LanguageContainerService.Keys["Services_UniqueSoftwareDev_Questions_3"]">
+        <Answer>
+            @LanguageContainerService.Keys["Services_UniqueSoftwareDev_Questions_3_Answer"]
+        </Answer>
+    </ToggleableQuestionComponent>
+
+    <ToggleableQuestionComponent Question="@LanguageContainerService.Keys["Services_UniqueSoftwareDev_Questions_4"]">
+        <Answer>
+            @LanguageContainerService.Keys["Services_UniqueSoftwareDev_Questions_4_Answer"]
+        </Answer>
+    </ToggleableQuestionComponent>
+
+    <ToggleableQuestionComponent Question="@LanguageContainerService.Keys["Services_UniqueSoftwareDev_Questions_5"]">
+        <Answer>
+            @LanguageContainerService.Keys["Services_UniqueSoftwareDev_Questions_5_Answer"]
+        </Answer>
+    </ToggleableQuestionComponent>
+
+    <ToggleableQuestionComponent Question="@LanguageContainerService.Keys["Services_UniqueSoftwareDev_Questions_6"]">
+        <Answer>
+            @LanguageContainerService.Keys["Services_UniqueSoftwareDev_Questions_6_Answer"]
+        </Answer>
+    </ToggleableQuestionComponent>
+</div>
+
+<HomeAPP.WebAPPs.SPA.Blazor.WASM.Pages.Contact.Components.ContactFooter />
