--- a/src/WebAPPs/SPA/Blazor.WASM/Pages/Services/Service/WebDev.razor
+++ b/src/WebAPPs/SPA/Blazor.WASM/Pages/Services/Service/WebDev.razor
@@ -1,1 +1,52 @@
 ﻿@page "/services/web-dev"
+
+@inject ILanguageContainerService LanguageContainerService
+
+<TextOverImage Alt="@LanguageContainerService.Keys["Services_WebDev_ImageAlt_Title"]"
+               Src="https://via.placeholder.com/1000x300"
+               TextPosition="TextOverImageType.Centered">
+    <Text>
+        <MatH1>@LanguageContainerService.Keys["Services_WebDev_Title"]</MatH1>
+    </Text>
+</TextOverImage>
+
+<MatDivider Class="m-5" />
+
+<div class="mat-layout-grid">
+    <div class="mat-layout-grid-inner">
+        <div class="mat-layout-grid-cell">
+            <MatH3>@LanguageContainerService.Keys["Services_WebDev_WhatWeDoWithWeb_Title"]</MatH3>
+            <p>
+                @LanguageContainerService.Keys["Services_WebDev_WhatWeDoWithWeb_Text"]
+            </p>
+        </div>
+        <div class="mat-layout-grid-cell">
+            <img src="https://via.placeholder.com/500x300" alt="@LanguageContainerService.Keys["Services_WebDev_ImageAlt_WhatWeDoWithWeb"]" />
+        </div>
+    </div>
+    <div class="mat-layout-grid-inner">
+        <div class="mat-layout-grid-cell">
+            <img src="https://via.placeholder.com/500x300" alt="@LanguageContainerService.Keys["Services_WebDev_ImageAlt_HowWePlanTheNewProject"]" />
+        </div>
+        <div class="mat-layout-grid-cell">
+            <MatH3>@LanguageContainerService.Keys["Services_WebDev_HowWePlanTheNewProject_Title"]</MatH3>
+            <p>
+                @LanguageContainerService.Keys["Services_WebDev_HowWePlanTheNewProject_Text"]
+            </p>
+        </div>
+    </div>
+
+    <MatDivider Class="m-3" />
+
+    <div class="mat-layout-grid-inner">
+        <div class="mat-layout-grid-cell">
+            <MatH3>@LanguageContainerService.Keys["Services_WebDev_HowWeChooseTechStack_Title"]</MatH3>
+            <p>
+                @LanguageContainerService.Keys["Services_WebDev_HowWeChooseTechStack_Text"]
+            </p>
+        </div>
+    </div>
+
+</div>
+
+<HomeAPP.WebAPPs.SPA.Blazor.WASM.Pages.Contact.Components.ContactFooter />
